--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 </head>
 <body>
 <section id="overview" class="cell markdown" id="cJ2zJBNqvAlt">
-<h1>Overview</h1>
+<h1>Multi-Document QA with LLMs (GPT-3.5/4) and Neural Reranking</h1>
 <p>This will implement a retrieval + QA system. The input to the system
 is multiple documents and a question. The output is an answer and an
 explanation of how the provided documents support the answer.</p>
