--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
 <body>
 <section id="overview" class="cell markdown" id="cJ2zJBNqvAlt">
 <h1>Multi-Document QA with LLMs (GPT-3.5/4) and Neural Reranking</h1>
+<p>GitHub: <a href="https://github.com/sakshamprakash01/Retrival-Augmented-Generation-Dynamic-Prompting-LLMs-for-better-Q-A" target="_blank">Retrieval-Augmented Generation & Dynamic Prompting with LLMs for better Q&A</a></p>
 <p>This will implement a retrieval + QA system. The input to the system
 is multiple documents and a question. The output is an answer and an
 explanation of how the provided documents support the answer.</p>
